# Chatting-With-a-Robot

./: 1.py  Keywords.json  README.md  audio1389724773.m4a  client.py  flask_demo.py  proof.py  received_file.txt  socket_s.py  socket_server.py
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/example/myapplication/: MainActivity.kt
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
AppleApp/: App.js  app.json  package-lock.json  package.json
Server/: .gitignore  Dockerfile  README.md  demostrings.json  diagnostic.json  pyproject.toml  requirements-windows.txt  requirements.txt
Server/scripts/: download_model_medium.py  mimic_plc.py  uploadfile.py
Server/server/: __init__.py  __main__.py  blueprints.py  manager.py  processing.py  robocomm.py
